--- a/src/style/color.css
+++ b/src/style/color.css
@@ -6,6 +6,14 @@
 @import "@radix-ui/colors/violet-dark.css";
 @import "@radix-ui/colors/black-alpha.css";
 @import "@radix-ui/colors/white-alpha.css";
+@import "@radix-ui/colors/tomato.css";
+@import "@radix-ui/colors/tomato-dark.css";
+@import "@radix-ui/colors/tomato-alpha.css";
+@import "@radix-ui/colors/tomato-dark-alpha.css";
+@import "@radix-ui/colors/amber.css";
+@import "@radix-ui/colors/amber-dark.css";
+@import "@radix-ui/colors/amber-alpha.css";
+@import "@radix-ui/colors/amber-dark-alpha.css";
 
 /* https://github.com/radix-ui/themes/blob/544982ad6e52f84673f1f48736cf7e5501d70e9e/packages/radix-ui-themes/src/styles/tokens/color.css */
 :where(:root) {
@@ -70,6 +78,7 @@
   --accent-a11: var(--violet-a11);
   --accent-a12: var(--violet-a12);
 
+  --star-1: var(--amber-1);
 }
 
 @theme {
@@ -124,6 +133,8 @@
   --color-gray-10: var(--gray-10);
   --color-gray-11: var(--gray-11);
   --color-gray-12: var(--gray-12);
+
+  --color-star-1: var(--star-1);
 
   --color-background: var(--color-background);
 }
