--- a/src/style/global.css
+++ b/src/style/global.css
@@ -10,3 +10,32 @@ body {
   color: var(--gray-12);
   touch-action: manipulation;
 }
+
+.react-aria-ColorWheelTrack::before, .react-aria-ColorWheelTrack::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  z-index: 1;
+  clip-path: inherit;
+}
+
+/* Outer shadow */
+.react-aria-ColorWheelTrack::before {
+  background: radial-gradient(
+    circle at 50% 50%,
+    rgba(0,0,0,0) 135px,
+    rgba(0,0,0,0.05) 152px,
+    rgba(0,0,0,0) 170px
+  );
+}
+
+/* Inner shadow */
+.react-aria-ColorWheelTrack::after {
+  background: radial-gradient(
+    circle at 50% 50%,
+    rgba(0,0,0,0) 95px,
+    rgba(0,0,0,0.05) 100px,
+    rgba(0,0,0,0) 110px
+  );
+}
