--- a/src/style/main.css
+++ b/src/style/main.css
@@ -6,6 +6,7 @@
 }
 
 @import "./color.css";
+@import "./guess-color.css";
 @import "./shadow.css";
 @import "./typography.css";
 @import "./radius.css";
